Cleaning Up
Rewriting a few things to be more legible.